# zeebra

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: identities.rs  lib.rs
src/fft/: domain.rs  evaluate.rs  interpolate.rs  mod.rs
src/fields/: binary_field.rs  extension_field.rs  finite_field.rs  irreducible_polynomials.rs  mod.rs  prime_field_128.rs  prime_field_64.rs
src/grobner/: buchberger.rs  mod.rs  s_polynomial.rs
src/integers/: gcd.rs  mod.rs  u256.rs  utils.rs  ux64.rs
src/integers/big_integers/: big_int.rs  big_uint.rs  from_dec_str.rs  mod.rs  multi_word_add.rs  multi_word_cmp.rs  multi_word_div.rs  multi_word_mul.rs  multi_word_shift.rs  multi_word_sub.rs
src/integers/prime_factors/: factoring.rs  generator.rs  miller_rabin.rs  mod.rs  pollard_rho.rs  small_primes.rs
src/linalg/: crout.rs  gauss_jordan.rs  mod.rs  vector.rs  vector_indexing.rs  vector_ops.rs  vector_scalar_ops.rs
src/linalg/matrix/: arithmetic_ops.rs  error.rs  indexing.rs  iterating.rs  matrix_scalar_ops.rs  matrix_vector_ops.rs  mod.rs  special.rs
src/macros/: matrix.rs  mod.rs
src/poly/: mod.rs
src/poly/multivariate/: mod.rs  monomial.rs  monomial_arithmetic.rs  monomial_order.rs  multi_poly.pest  multi_poly_parser.rs  sparse_multivariate_polynomial.rs  sparse_multivariate_polynomial_arithmetic.rs  sparse_multivariate_polynomial_conversions.rs  term.rs  term_arithmetic.rs
src/rings/: mod.rs
src/util/: duplicates.rs  impl_add_variants.rs  impl_div_variants.rs  impl_mul_variants.rs  impl_sub_variants.rs  mod.rs
(+9 files in other folders)
