[package]
name = "zeebra"
description = "Computational algebra for Zero-Knowledge Proofs"
repository = "https://github.com/mfaulk/zeebra"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["zkp", "zero-knowledge", "algebra", "cryptography"]


[lib]
doctest = false

[dependencies]
bincode = "1.3.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
pest = "2.7"
pest_derive = "2.7"
pest_generator = "2.7"
proptest = "1.3.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"
